agregacion de actas

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
 <body>
     <div id="root"></div>
     <div id="portal-modal"></div>
+    <div id="portal-modal-actas"></div>
     <div id="portal-viewer"></div>
 </body>
 </html>
